fixed the banner issue with overflow

--- a/src/CSS/miscellaneous.scss
+++ b/src/CSS/miscellaneous.scss
@@ -34,9 +34,7 @@ $error-red: #c40000;
 }
 
 .pageWrapper {
-    position: relative;
     width: 100%;
-    z-index: 1000;
 
     display: flex;
     flex-direction: column;
