--- a/src/CSS/store.scss
+++ b/src/CSS/store.scss
@@ -1,25 +1,34 @@
 @import "./miscellaneous.scss";
 
 .front {
-    width: 100%;
+    position: relative;
+    width: 98%;
+    z-index: 50;
 
     &-banner {
         position: relative;
-        top: 0;
-        left: 0;
-        width: 97%;
-        // overflow: hidden;
+        width: 100%;
+        height: 47rem;
+        overflow: hidden;
 
-        img {
+        &__image {
+            position: absolute;
+            top: 0;
+            left: 0;
             width: 100%;
-            height: auto;
+            height: 100%;
+            transition: all 0.2s ease-in;
+
+            img {
+                width: 100%;
+            }
         }
 
         &__arrows {
             position: absolute;
             top: 0;
             left: 0;
-            width: 97%;
+            width: 100%;
             height: 19rem;
             z-index: 190;
 
@@ -38,9 +47,10 @@
     }
 
     &-products {
-        position: relative;
-        top: 18rem;
-        width: 97%;
+        position: absolute;
+        top: 19rem;
+        width: 100%;
+        height: auto;
         z-index: 51;
 
         display: flex;
